# NullEngine

./: .gitignore  LICENSE.md  README.md
examples/: CMakeLists.txt
examples/HelloTriangle/: CMakeLists.txt
examples/HelloTriangle/src/: main.cpp
examples/MathTest/: CMakeLists.txt
examples/MathTest/src/: main.cpp
examples/src/: main.cpp
null-engine/: CMakeLists.txt
null-engine/include/NE/: Common.h
null-engine/include/NE/API/: Common_SDL2.h  Common_SDL2_Vulkan.h  Common_Vulkan.h
null-engine/include/NE/Core/: Core.h  CoreTypes.h  Engine.h  Variant.h
null-engine/include/NE/Core/Debug/: Debug.h  Debug.inl
null-engine/include/NE/Math/: Math.h  MathConstants.h  MathTypes.h  Vector.def  Vector.inl  VectorMath.def  VectorMath.h  VectorMath.inl
null-engine/include/NE/Rendering/: GraphicsDevice.h  PipelineManager.h  PipelineState.h  RenderPass.h  RenderingTypes.h  Shader.h  ShaderManager.h
null-engine/include/NE/System/: Device.h  Gamepad.h  GraphicsDevice.h  Input.h  Keyboard.h  Mouse.h  SystemTypes.h  Window.h
null-engine/include/NE/Util/: Enum.h
null-engine/shaders/sample/: hello-triangle.frag  hello-triangle.hlsl  hello-triangle.vert
null-engine/src/Core/: Engine.cpp
null-engine/src/Rendering/: GraphicsDevice.cpp  GraphicsDevice_Vulkan.cpp  GraphicsDevice_Vulkan_SDL2.cpp  PipelineManager.cpp  PipelineState_Vulkan.cpp  RenderPass.cpp  ShaderManager.cpp  Shader_Vulkan.cpp
null-engine/src/System/: Device.cpp  Device_Vulkan.cpp  Device_Vulkan_SDL2.cpp  Gamepad.cpp  Input.cpp  Input_SDL2.cpp  Keyboard.cpp  Mouse.cpp  Window.cpp  Window_SDL2.cpp  Window_SDL2_Vulkan.cpp
null-engine/tools/: compile_shaders.py  create_shader_list.py  tools_common.py
src/: CMakeLists.txt
src/NE/Core/Debug/: Debug.inl
tests/Math/: CMakeLists.txt  VectorTest.cpp  VectorTest.def
